# ansible-collection-gluster

./: .ansible-lint-ignore  .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  justfile  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: libvirt.yml  lint.yml  molecule.yml  release.yml
defaults/: main.yml
extensions/molecule/common/: verify.yml
extensions/molecule/georeplication/: molecule.yml  side_effect.yml  verify.yml
extensions/molecule/install/: side_effect.yml
extensions/molecule/scaleup/: molecule.yml
meta/: main.yml
molecule/common/: install.yml  verify.yml
molecule/default/: converge.yml
molecule/georeplication/: molecule.yml  side_effect.yml  verify.yml
molecule/install/: molecule.yml  side_effect.yml
molecule/restart/: molecule.yml  side_effect.yml
molecule/scaledown/: molecule.yml  side_effect.yml
molecule/scaleup/: molecule.yml  side_effect.yml
molecule/start/: molecule.yml  side_effect.yml
molecule/stop/: molecule.yml  side_effect.yml
molecule/update/: molecule.yml  side_effect.yml
playbooks/: client.yml  facts.yml  gluster.yml  install.yml  prepare.yml  restart.yml  ssh.yml  start.yml  stop.yml  update.yml  virtualenv.yml  volumes.yml
playbooks/georeplication/: create.yml  delete.yml  ssh.yml  start.yml  stop.yml  volumes.yml
playbooks/tasks/: service.yml
plugins/lookup/: georeplication.py
plugins/modules/: gluster_peer.py  peer_status.py  pool_list.py  version.py  volume_info.py  volume_status.py
roles/: .gitignore
roles/gluster/: README.md
tasks/: main.yml
vars/: main.yml
(+16 files in other folders)
