[tool.poetry]
name = "pokerops.gluster"
version = "0.1.0"
description = ""
authors = ["pokerops"]

[tool.poetry.dependencies]
python = "^3.11"
molecule = "^25.4.0"
cryptography = "^44.0.2"
molecule-plugins = "^23.7.0"
yamllint = "^1.37.0"
netaddr = "^1.3.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
