[tool.poetry]
name = "pokerops.gluster"
version = "0.1.0"
description = ""
authors = ["pokerops"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
molecule = "^25.4.0"
cryptography = "^44.0.2"
molecule-plugins = "^23.7.0"
yamllint = "^1.37.0"
netaddr = "^1.3.0"
docker = "^7.1.0"
ansible = "^11.4.0"
libvirt-python = "^11.2.0"
ansible-lint = "^25.2.1"
lxml = "^5.3.2"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
